--- a/core/templates/core/configuration.html
+++ b/core/templates/core/configuration.html
@@ -60,7 +60,7 @@
                         <h2 class="text-has-shade">{{ config.full_name }}</h2>
                     </div>
                 </header>
-                <form id="configuration" class="admin-form pull-left" style="width: auto" method="post">{% csrf_token %}
+                <form id="configuration" class="admin-form pull-left" enctype="multipart/form-data" method="post" style="width: auto">{% csrf_token %}
                     <input type="hidden" name="object_id" value="{{ config.id }}" />
                     <input type="hidden" name="company_name_slug" value="{{ config.company_name_slug }}" />
                     {% if config.can_manage_currencies %}
