--- a/static/ikwen/css/admin.css
+++ b/static/ikwen/css/admin.css
@@ -289,6 +289,7 @@ footer a {color: #999}
     .results-filter {padding: 35px 10px 5px 0;}
     #admin-content .member .info, #admin-content .ik-li .info {max-width: 600px;}
     #admin-content .has-edge-panel-right .member .info, #admin-content .has-edge-panel-right .ik-li .info {max-width: 400px;}
+    .has-edge-panel-right .content-tab-list {padding-right: 570px}
     .pagination {margin-left: 0}
     .card-section {margin-bottom: 50px;}
 }
