--- a/core/templates/core/base_bs.html
+++ b/core/templates/core/base_bs.html
@@ -12,7 +12,7 @@
 		{% block head_style %}
             <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
             <link rel='stylesheet' href="{% static 'ikwen/css/flatly.bootstrap.min.css' %}" />
-            <link rel='stylesheet' href="{% static 'ikwen/css/base.css' %}?v=19.9.28" />
+            <link rel='stylesheet' href="{% static 'ikwen/css/base.css' %}?v=19.10.11" />
 		{% endblock %}
         {% block head_js %}
             <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -28,6 +28,9 @@
     <body>
         <div id="top-notice-ctnr" style="display: none">
             <span class="floating-notice has-shade" style="float: none; position: static"> </span>
+        </div>
+        <div class="progress" id="network-manager" style="display: none">
+            <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width: 0"></div>
         </div>
         {% block header %}
             {% with collaborates_on=user.collaborates_on %}
@@ -261,6 +264,12 @@
                     }];
                     $('form#search input').focusout(function() {$('#navbar-results').fadeOut()});
                     ikwen.setupSearch('#search input', '#navbar-results', searchDescriptor);
+                    window.addEventListener("beforeunload", (e) => {
+                        $('#network-manager').show().find('.progress-bar').animate({width: '20%'}, 100);
+                    });
+                    window.addEventListener("unload", (e) => {
+                        $('#network-manager .progress-bar').animate({width: '100%'}, 100);
+                    });
                 })()
             </script>
         {% endblock %}
