--- a/static/ikwen/css/base.css
+++ b/static/ikwen/css/base.css
@@ -29,6 +29,7 @@ body {color: #464646;}
     margin-left: 6px;
     text-decoration: none;
 }
+#network-manager {height: 0; width: 0;position: fixed}
 .actions .fa, .fa.action, .actions .fas, .fas.action {font-size: 18px}
 .modal .actions {clear: both}
 .cta {font-family: "PT Sans", Lato, sans-serif;font-weight: 700;letter-spacing: 0.5px;}
@@ -455,5 +456,6 @@ footer .company-name {color: #666; text-decoration: none}
 }
 
 @media all and (display-mode: standalone) {
+    #network-manager {height: 3px;left: 0;position: fixed;top: 0;width: 100%;z-index: 1000000;}
     .install-pwa {display: none}
 }
