--- a/accesscontrol/templates/accesscontrol/sign_in.html
+++ b/accesscontrol/templates/accesscontrol/sign_in.html
@@ -48,9 +48,13 @@
                 </div>
                 <div class="form-group">
                     {% if settings.IS_UMBRELLA %}
-                        <button class="btn btn-primary btn-block btn-md"> {% trans "Submit" %} </button>
+                        <button class="btn btn-primary btn-block btn-md">
+                            {% include 'core/snippets/button_spinner.html' %}
+                            {% trans "Submit" %}
+                        </button>
                     {% else %}
                         <button class="btn btn-primary btn-block btn-md login-with-ikwen">
+                            {% include 'core/snippets/button_spinner.html' %}
                             {% blocktrans %}Login with <strong>ikwen</strong>{% endblocktrans %}
                         </button>
                     {% endif %}
@@ -80,6 +84,10 @@
             }).blur(function() {
                 var username = $(this).val().replace(/ /g, '').toLowerCase();
                 $(this).val(username);
+            });
+            $('#login-form').submit(() => {
+                if ($('#login-form button').hasClass('processing')) return false;
+                $('#login-form button').addClass('processing')
             });
         })()
     </script>
